--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -238,6 +238,13 @@ body,html {
     top:-70px;
   }
 
+  #legend {
+    bottom:30px;
+    left: 20px;
+    right: 20px;
+    width: auto;
+  }
+
   #list-container {
     display: none;
     left: 20px;
