adding search ability

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -220,6 +220,10 @@ body,html {
   }
 }
 
+.geocoder-control-suggestions {
+  margin-top:0px;
+}
+
 .geocoder-control-input {
   background-color:#f8f8f8;
   border-bottom:1px solid #EEE;
