adds cedar and replaces homepage list with chart

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -108,6 +108,9 @@ body,html {
   border-radius:2px;
   overflow: hidden;
   overflow-y:auto;
+  #home-chart {
+    margin-top:-25px;
+  }
   .caps {
     text-transform:uppercase;
   }
