--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -79,6 +79,10 @@ body,html {
   display:none;
 }
 
+#nprogress .spinner {
+  right: 85px;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   #logo {
